Z-index fix for notes

--- a/css/style.css
+++ b/css/style.css
@@ -1048,6 +1048,7 @@ div.priority-low {
 	left:15px;
 	width:310px;
 	padding:6px;
+	z-index:2000;
 }
 .closed .note-content {
 	white-space: nowrap;
